--- a/Running-Tracker/index.html
+++ b/Running-Tracker/index.html
@@ -53,13 +53,16 @@
 
         <section class="progress">
             <h3>
-                Weekly target: <span id="progresTotal">0</span> /
-                <span id="target">25</span> kilometres
-            </h3> 
-            <div id="progresCircleWrapper">
-
+              Weekly target: <span id="progressTotal">0</span> /
+              <span id="target"></span> miles
+            </h3>
+            <div class="progressCircleWrapper">
+              <div id="progressCircle">
+                <div id="progressCenter"></div>
+              </div>
             </div>
-        </section>   
+          </section>
+          
         <script src="scripts.js"></script>    
     </body>
 </html>
