--- a/Running-Tracker/index.html
+++ b/Running-Tracker/index.html
@@ -16,7 +16,7 @@
             </svg>
         </div>
         <form>
-            <label for="entry">Number of kilometres today</label> 
+            <label for="entry">Number of kilometers today</label> 
        
         <input type="number" id="entry" step="0.1" />
         <br>
@@ -54,7 +54,7 @@
         <section class="progress">
             <h3>
               Weekly target: <span id="progressTotal">0</span> /
-              <span id="target"></span> miles
+              <span id="target"></span> kilometers
             </h3>
             <div class="progressCircleWrapper">
               <div id="progressCircle">
@@ -62,7 +62,7 @@
               </div>
             </div>
           </section>
-          
+
         <script src="scripts.js"></script>    
     </body>
 </html>
