--- a/Guess-the-number/index.html
+++ b/Guess-the-number/index.html
@@ -7,23 +7,24 @@
         <title>Guess the Number Game</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
-    <body>
+    <body onload="init()">
         <main>
             <div id="welcomeScreen">
-                <h2> Guess the random number <br> between 1-100</h2>
+                <h2> Guess the random number <br /> between 1-100</h2>
                 <section>
                     <p>Select difficulty setting:</p>
+
                     <div class="button-wrapper">
-                        <button>Easy: 10 attempts</button>
-                        <button>Hard: 5 attempts</button>
+                        <button onclick="easyMode()">Easy: 10 attempts</button>
+                        <button onclick="hardMode()">Hard: 5 attempts</button>
                     </div>
                 </section>
             </div>
             <div id="gameArea">
-                <button id="newGameButton">NEW GAME</button>
+                <button id="newGameButton" onclick="newGame()">NEW GAME</button>
                 <section>
                     <h3 id="textOutput">Your Guess:</h3>
-                    <input type="number" id="inputBox" min="1" max="100" />
+                    <input type="number" id="inputBox" min="1" max="100" onchange="compareGuess()" />
                 </section>
                 <section>
                     <p>Current range:</p>
@@ -43,9 +44,9 @@
                         <p>Your previous guesses</p>
                         <span id="guesses">-</span>
                     </div>
-
                 </section>
             </div>
         </main>
+        <script src="script.js"></script>
     </body>
 </html>
